Added Zoomed in Graph for Ex3

--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -1,11 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 3: Binary Mixture with a Tangent Pinch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A mixture of Benzene and Ethylenediamine has an additional constraint on the Reflux Ratio due to a pinch point on the equilibrium curve"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## IMPORT NECESSARY LIBRARIES ##\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
@@ -21,7 +41,26 @@
     "from IPython.display import display\n",
     "from ipywidgets import interactive, Button, VBox, HBox, Output\n",
     "from IPython.display import clear_output\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n# Define the sliders:\\nxD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description=\\'$x_D$:\\', readout_format=\\'.2f\\')\\nxB2_slider = widgets.FloatSlider(value=0.05, min=0, max= 0.5, step=0.0001, description=\\'$x_B$:\\', readout_format=\\'.2f\\')\\nr_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description=\\'R max:\\', readout_format=\\'.1f\\')\\n\\ndef plot_r_vs_fixedpoints_ex2(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\\n    clear_output(wait=True)\\n    display(\"Calculating... Please wait.\")\\n    r_values = np.linspace(0.001, r_max, 100)\\n    x_fixed_r_arr = []\\n    x_fixed_s_arr = []\\n\\n    for r in tqdm(r_values, desc=\"Progress\"):\\n        distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\\n        x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\\n        x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\\n        x_fixed_r_arr.append(x_fixed_r)\\n        x_fixed_s_arr.append(x_fixed_s)\\n\\n    # flatten the lists and repeat the r_values according to the number of x values\\n    r_values_r = np.repeat(r_values, [len(x) for x in x_fixed_r_arr])\\n    r_values_s = np.repeat(r_values, [len(x) for x in x_fixed_s_arr])\\n    x_fixed_r_arr = np.hstack(x_fixed_r_arr)\\n    x_fixed_s_arr = np.hstack(x_fixed_s_arr)\\n\\n    plt.scatter(r_values_r, x_fixed_r_arr,marker = \\'x\\')\\n    plt.scatter(r_values_s, x_fixed_s_arr, marker =\\'x\\')\\n    plt.xlabel(\"Reflux Ratio\")\\n    plt.ylabel(\"x\")\\n    plt.show()\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "#Define empirical relationship\n",
     "def xtoy(x):\n",
@@ -35,7 +74,7 @@
     "# Define the sliders:\n",
     "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=0.5, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-1, max=1, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "\n",
     "def plot_distil_oplines_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
@@ -55,18 +94,24 @@
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()  # This is essential for the plot to be displayed in the Output widget in Jupyter.\n",
     "    \n",
-    "def plot_distil_rectifying_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
+    "def plot_distil_rectifying_ex2(xD=0.95, xB=0.05, R=R1_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
     "    distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
-    "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
-    "    distillation_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
-    "    plt.subplots_adjust(hspace=0)\n",
+    "    fig, axs = plt.subplots(2, 2, figsize=(14, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "\n",
+    "    distillation_model.plot_distil_rect_binary(ax=axs[0, 0], ax_fixed=axs[1, 0])\n",
+    "    #distillation_model.plot_distil_rect_binary(ax=axs[0, 1], ax_fixed=axs[1, 1])\n",
+    "\n",
+    "    #distillation_model.plot_distil_rect_binary(ax=axs[0, 0].inset_axes([0.6, 0.6, 0.35, 0.35]), ax_fixed=axs[1, 0].inset_axes([0.6, 0.6, 0.35, 0.35]))\n",
+    "    distillation_model.plot_distil_rect_binary(ax=axs[0, 1], ax_fixed=axs[1, 1], zoom_factor = 1)\n",
+    "    \n",
+    "    plt.subplots_adjust(hspace=0, wspace=0.4)  # Adjust spacing between subplots\n",
     "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
     "    \n",
     "out_strip = Output()\n",
     "out_rect = Output()\n",
     "out_oplines = Output()\n",
-    "\n",
+    "'''\n",
     "# Define the sliders:\n",
     "xD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max= 0.5, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
@@ -96,23 +141,33 @@
     "    plt.scatter(r_values_s, x_fixed_s_arr, marker ='x')\n",
     "    plt.xlabel(\"Reflux Ratio\")\n",
     "    plt.ylabel(\"x\")\n",
-    "    plt.show()\n"
+    "    plt.show()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Demo 2: Rectifying Pinch Region\n",
+    "\n",
+    "##### The inflection point in the equilibrum curve restricts the range of feasible reflux rations when the distillate composition is sufficiently high (set at 0.95 for this Demo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cc91de13a4540e79c9ba565bcdcc929",
+       "model_id": "c8158ae391d3400893c590137a02c090",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), …"
+       "VBox(children=(FloatLogSlider(value=1.0, description='Reflux Ratio:', max=2.0, min=-2.0, readout_format='.1f',…"
       ]
      },
      "metadata": {},
@@ -121,7 +176,7 @@
    ],
    "source": [
     "# Create your interactive widget but don't display it\n",
-    "rect_plot = interactive(plot_distil_rectifying_ex2, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
+    "rect_plot = interactive(plot_distil_rectifying_ex2, xD=0.95, xB=0.05, R=R1_slider, continuous_update=False)\n",
     "\n",
     "# Define your button click behavior\n",
     "def on_rect_button_click(b):\n",
@@ -133,7 +188,7 @@
     "rect_button = Button(description='Generate Plot')\n",
     "rect_button.on_click(on_rect_button_click)\n",
     "\n",
-    "layout = VBox([HBox(rect_plot.children[:-1]), rect_button, out_rect])\n",
+    "layout = VBox([R1_slider, rect_button, out_rect])\n",
     "display(layout)"
    ]
   },
@@ -145,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f1677618e394f6396c0d1b470451d64",
+       "model_id": "4845b9d2f6ee4eeca7b2fd1e7d3abc2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
