--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -75,6 +75,7 @@
     "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB1_slider = widgets.FloatSlider(value=0.05, min=0, max=0.5, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
     "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-1, max=1, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R2_slider =  widgets.FloatSlider(value=1.00, min=0.8, max=1.2, step=0.0001, description='Reflux Ratio:', readout_format='.2f')\n",
     "\n",
     "def plot_distil_oplines_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
@@ -94,7 +95,7 @@
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()  # This is essential for the plot to be displayed in the Output widget in Jupyter.\n",
     "    \n",
-    "def plot_distil_rectifying_ex2(xD=0.95, xB=0.05, R=R1_slider.value):\n",
+    "def plot_distil_rectifying_ex2(xD=0.95, xB=0.05, R=R2_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
     "    distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
     "    fig, axs = plt.subplots(2, 2, figsize=(14, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
@@ -162,12 +163,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8158ae391d3400893c590137a02c090",
+       "model_id": "6d7c08ede7cd4d60a588454b5f141cdd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(FloatLogSlider(value=1.0, description='Reflux Ratio:', max=2.0, min=-2.0, readout_format='.1f',…"
+       "VBox(children=(FloatSlider(value=1.0, description='Reflux Ratio:', max=1.2, min=0.8, step=0.0001), Button(desc…"
       ]
      },
      "metadata": {},
@@ -176,19 +177,19 @@
    ],
    "source": [
     "# Create your interactive widget but don't display it\n",
-    "rect_plot = interactive(plot_distil_rectifying_ex2, xD=0.95, xB=0.05, R=R1_slider, continuous_update=False)\n",
+    "rect_plot = interactive(plot_distil_rectifying_ex2, xD=0.95, xB=0.05, R=R2_slider, continuous_update=False)\n",
     "\n",
     "# Define your button click behavior\n",
     "def on_rect_button_click(b):\n",
     "    with out_rect:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_distil_rectifying_ex2(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value)\n",
+    "        plot_distil_rectifying_ex2(xD=0.95, xB=0.05, R=R2_slider.value)\n",
     "\n",
     "rect_button = Button(description='Generate Plot')\n",
     "rect_button.on_click(on_rect_button_click)\n",
     "\n",
-    "layout = VBox([R1_slider, rect_button, out_rect])\n",
+    "layout = VBox([R2_slider, rect_button, out_rect])\n",
     "display(layout)"
    ]
   },
@@ -200,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4845b9d2f6ee4eeca7b2fd1e7d3abc2f",
+       "model_id": "93b7292fd40a449aa0eddf859505625e",
        "version_major": 2,
        "version_minor": 0
       },
