Added low xD Demo for ex3

--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -48,18 +48,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n# Define the sliders:\\nxD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description=\\'$x_D$:\\', readout_format=\\'.2f\\')\\nxB2_slider = widgets.FloatSlider(value=0.05, min=0, max= 0.5, step=0.0001, description=\\'$x_B$:\\', readout_format=\\'.2f\\')\\nr_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description=\\'R max:\\', readout_format=\\'.1f\\')\\n\\ndef plot_r_vs_fixedpoints_ex2(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\\n    clear_output(wait=True)\\n    display(\"Calculating... Please wait.\")\\n    r_values = np.linspace(0.001, r_max, 100)\\n    x_fixed_r_arr = []\\n    x_fixed_s_arr = []\\n\\n    for r in tqdm(r_values, desc=\"Progress\"):\\n        distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\\n        x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\\n        x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\\n        x_fixed_r_arr.append(x_fixed_r)\\n        x_fixed_s_arr.append(x_fixed_s)\\n\\n    # flatten the lists and repeat the r_values according to the number of x values\\n    r_values_r = np.repeat(r_values, [len(x) for x in x_fixed_r_arr])\\n    r_values_s = np.repeat(r_values, [len(x) for x in x_fixed_s_arr])\\n    x_fixed_r_arr = np.hstack(x_fixed_r_arr)\\n    x_fixed_s_arr = np.hstack(x_fixed_s_arr)\\n\\n    plt.scatter(r_values_r, x_fixed_r_arr,marker = \\'x\\')\\n    plt.scatter(r_values_s, x_fixed_s_arr, marker =\\'x\\')\\n    plt.xlabel(\"Reflux Ratio\")\\n    plt.ylabel(\"x\")\\n    plt.show()\\n'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#Define empirical relationship\n",
@@ -95,55 +84,29 @@
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()  # This is essential for the plot to be displayed in the Output widget in Jupyter.\n",
     "    \n",
-    "def plot_distil_rectifying_ex2(xD=0.95, xB=0.05, R=R2_slider.value):\n",
+    "def plot_distil_rectifying_ex2_demo2(xD=0.95, xB=0.05, R=R2_slider.value):\n",
     "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
     "    distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
     "    fig, axs = plt.subplots(2, 2, figsize=(14, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "\n",
     "    distillation_model.plot_distil_rect_binary(ax=axs[0, 0], ax_fixed=axs[1, 0])\n",
-    "    #distillation_model.plot_distil_rect_binary(ax=axs[0, 1], ax_fixed=axs[1, 1])\n",
-    "\n",
-    "    #distillation_model.plot_distil_rect_binary(ax=axs[0, 0].inset_axes([0.6, 0.6, 0.35, 0.35]), ax_fixed=axs[1, 0].inset_axes([0.6, 0.6, 0.35, 0.35]))\n",
     "    distillation_model.plot_distil_rect_binary(ax=axs[0, 1], ax_fixed=axs[1, 1], zoom_factor = 1)\n",
     "    \n",
     "    plt.subplots_adjust(hspace=0, wspace=0.4)  # Adjust spacing between subplots\n",
     "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
+    "\n",
+    "def plot_distil_rectifying_ex2_demo3(xD=0.95, xB=0.05, R=R2_slider.value):\n",
+    "    plt.close('all')  # Ensure that any existing figures are closed before plotting a new one.\n",
+    "    distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=R)\n",
+    "    fig, axs = plt.subplots(2, 1, figsize=(7, 7), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
+    "    distillation_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
+    "    plt.subplots_adjust(hspace=0)  \n",
+    "    plt.show()  # Ensure the plot is displayed in Jupyter.\n",
     "    \n",
     "out_strip = Output()\n",
-    "out_rect = Output()\n",
-    "out_oplines = Output()\n",
-    "'''\n",
-    "# Define the sliders:\n",
-    "xD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "xB2_slider = widgets.FloatSlider(value=0.05, min=0, max= 0.5, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
-    "\n",
-    "def plot_r_vs_fixedpoints_ex2(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
-    "    clear_output(wait=True)\n",
-    "    display(\"Calculating... Please wait.\")\n",
-    "    r_values = np.linspace(0.001, r_max, 100)\n",
-    "    x_fixed_r_arr = []\n",
-    "    x_fixed_s_arr = []\n",
-    "\n",
-    "    for r in tqdm(r_values, desc=\"Progress\"):\n",
-    "        distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\n",
-    "        x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\n",
-    "        x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\n",
-    "        x_fixed_r_arr.append(x_fixed_r)\n",
-    "        x_fixed_s_arr.append(x_fixed_s)\n",
-    "\n",
-    "    # flatten the lists and repeat the r_values according to the number of x values\n",
-    "    r_values_r = np.repeat(r_values, [len(x) for x in x_fixed_r_arr])\n",
-    "    r_values_s = np.repeat(r_values, [len(x) for x in x_fixed_s_arr])\n",
-    "    x_fixed_r_arr = np.hstack(x_fixed_r_arr)\n",
-    "    x_fixed_s_arr = np.hstack(x_fixed_s_arr)\n",
-    "\n",
-    "    plt.scatter(r_values_r, x_fixed_r_arr,marker = 'x')\n",
-    "    plt.scatter(r_values_s, x_fixed_s_arr, marker ='x')\n",
-    "    plt.xlabel(\"Reflux Ratio\")\n",
-    "    plt.ylabel(\"x\")\n",
-    "    plt.show()\n",
-    "'''"
+    "out_rect2 = Output()\n",
+    "out_rect3 = Output()\n",
+    "out_oplines = Output()"
    ]
   },
   {
@@ -152,7 +115,9 @@
    "source": [
     "###  Demo 2: Rectifying Pinch Region\n",
     "\n",
-    "##### The inflection point in the equilibrum curve restricts the range of feasible reflux rations when the distillate composition is sufficiently high (set at 0.95 for this Demo)"
+    "##### The inflection point in the equilibrum curve restricts the range of feasible reflux rations when the Distillate Composition $x_D$ is sufficiently high (set at 0.95 for this Demo).\n",
+    "\n",
+    "##### Move the Reflux Ratio to see how it affects the number of stages near the pinch point."
    ]
   },
   {
@@ -163,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d7c08ede7cd4d60a588454b5f141cdd",
+       "model_id": "7742280b93eb4128a208c9136fe4e74f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,20 +142,31 @@
    ],
    "source": [
     "# Create your interactive widget but don't display it\n",
-    "rect_plot = interactive(plot_distil_rectifying_ex2, xD=0.95, xB=0.05, R=R2_slider, continuous_update=False)\n",
+    "rect_plot = interactive(plot_distil_rectifying_ex2_demo2, xD=0.95, xB=0.05, R=R2_slider, continuous_update=False)\n",
     "\n",
     "# Define your button click behavior\n",
     "def on_rect_button_click(b):\n",
-    "    with out_rect:\n",
+    "    with out_rect2:\n",
     "        clear_output(wait=True)\n",
     "        plt.close('all')  # Close all open matplotlib plots\n",
-    "        plot_distil_rectifying_ex2(xD=0.95, xB=0.05, R=R2_slider.value)\n",
+    "        plot_distil_rectifying_ex2_demo2(xD=0.95, xB=0.05, R=R2_slider.value)\n",
     "\n",
     "rect_button = Button(description='Generate Plot')\n",
     "rect_button.on_click(on_rect_button_click)\n",
     "\n",
-    "layout = VBox([R2_slider, rect_button, out_rect])\n",
+    "layout = VBox([R2_slider, rect_button, out_rect2])\n",
     "display(layout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo 3: Low Distillate Purity\n",
+    "\n",
+    "##### While the Reflux Ratio may seem like the paramter that determines feasability, the Distillate Composition $x_D$ can also determine feasability.\n",
+    "\n",
+    "##### Here $x_D$ is set to equal 0.80, making the tangent pinch no longer a concern. "
    ]
   },
   {
@@ -201,7 +177,45 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93b7292fd40a449aa0eddf859505625e",
+       "model_id": "015fb30bfd734ad2b780d7b52c51863a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FloatLogSlider(value=1.0, description='Reflux Ratio:', max=1.0, min=-1.0, readout_format='.1f',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create your interactive widget but don't display it\n",
+    "rect_plot = interactive(plot_distil_rectifying_ex2_demo3, xD=0.80, xB=0.05, R=R1_slider, continuous_update=False)\n",
+    "\n",
+    "# Define your button click behavior\n",
+    "def on_rect_button_click(b):\n",
+    "    with out_rect3:\n",
+    "        clear_output(wait=True)\n",
+    "        plt.close('all')  # Close all open matplotlib plots\n",
+    "        plot_distil_rectifying_ex2_demo3(xD=0.80, xB=0.05, R=R1_slider.value)\n",
+    "\n",
+    "rect_button = Button(description='Generate Plot')\n",
+    "rect_button.on_click(on_rect_button_click)\n",
+    "\n",
+    "layout = VBox([R1_slider, rect_button, out_rect3])\n",
+    "display(layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4318a7315864ec9b0610fa648ee5add",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
