--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -128,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7742280b93eb4128a208c9136fe4e74f",
+       "model_id": "89f15ee2afe9455da59a1daf5eb1bcc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "015fb30bfd734ad2b780d7b52c51863a",
+       "model_id": "2e13d4d611e742f8b9481e96e2461c91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,25 +208,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4318a7315864ec9b0610fa648ee5add",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "source": [
+    "### Demo 4: Full Distillation Column\n",
+    "\n",
+    "##### Here the Stripping and Rectifying Lines are both shown and the $x_D$ and $x_B$ values can be changed in addition to the Reflux Ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create your interactive widget but don't display it\n",
     "oplines_plot = interactive(plot_distil_oplines_ex2, xD=xD1_slider, xB=xB1_slider, R=R1_slider, continuous_update=False)\n",
@@ -243,29 +237,6 @@
     "\n",
     "layout_oplines = VBox([HBox(oplines_plot.children[:-1]), oplines_button, out_oplines])\n",
     "display(layout_oplines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Create the interactive widget:\n",
-    "# fixed_points_reflux = widgets.interactive(plot_r_vs_fixedpoints_ex2, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
-    "\n",
-    "# # Display the interactive widget:\n",
-    "# display(fixed_points_reflux)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.misc import derivative\n",
-    "\n"
    ]
   }
  ],
