Standardize Markdown Headings

--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -4,19 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1: Separation of a Binary Mixture\n",
+    "# Example 1: Separation of a Binary Mixture\n",
     "\n",
-    "### Plot the Operating Lines and Equilibrium Curve for a Benzene/Toluene Mixture.\n",
-    "### The Reflux Ratio must be greater than a minimum value for a feasible separation.\n",
+    "#### Plot the Operating Lines and Equilibrium Curve for a Benzene/Toluene Mixture.\n",
+    "#### The Reflux Ratio must be greater than a minimum value for a feasible separation.\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "##### Import Necessary Libraries\n"
    ]
   },
   {
@@ -27,6 +19,7 @@
    },
    "outputs": [],
    "source": [
+    "## IMPORT NECESSARY LIBRARIES ##\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
