--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -213,7 +213,9 @@
    "source": [
     "### Demo 4: Full Distillation Column\n",
     "\n",
-    "##### Here the Stripping and Rectifying Lines are both shown and the $x_D$ and $x_B$ values can be changed in addition to the Reflux Ratio"
+    "##### Here the Stripping and Rectifying Lines are both shown and the $x_D$ and $x_B$ values can be changed in addition to the Reflux Ratio\n",
+    "\n",
+    "##### For the full column, green operating lines indicate feasable parameters.  Black lines indicate an infeasability caused by a tangent pinch.  And red operating lines indicate another infeasability."
    ]
   },
   {
