--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -110,40 +110,7 @@
     "\n",
     "out_strip = Output()\n",
     "out_rect = Output()\n",
-    "out_oplines = Output()\n",
-    "\n",
-    "\n",
-    "# # Define the sliders:\n",
-    "# xD2_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
-    "# xB2_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "# r_max_slider = widgets.FloatSlider(value=1.0, min=0, max=100, step=1, description='R max:', readout_format='.1f')\n",
-    "\n",
-    "# def plot_r_vs_fixedpoints_ex_1(r_max = r_max_slider.value, xD=xD2_slider.value, xB=xB2_slider.value):\n",
-    "#     clear_output(wait=True)\n",
-    "#     display(\"Calculating... Please wait.\")\n",
-    "#     r_values = np.linspace(0.001, r_max, 100)\n",
-    "#     x_fixed_r_arr = []\n",
-    "#     x_fixed_s_arr = []\n",
-    "\n",
-    "#     for r in tqdm(r_values, desc=\"Progress\"):\n",
-    "#         distillation_model = DistillationModelBinary(vle_model, xF=np.array([0.5, 0.5]), xD=np.array([xD, 1 - xD]), xB=np.array([xB, 1 - xB]), reflux=r)\n",
-    "#         x_fixed_r, _ = distillation_model.find_rect_fixedpoints_binary(100)\n",
-    "#         x_fixed_s, _ = distillation_model.find_strip_fixedpoints_binary(100)\n",
-    "#         x_fixed_r_arr.append(x_fixed_r)\n",
-    "#         x_fixed_s_arr.append(x_fixed_s)\n",
-    "\n",
-    "#   # flatten the lists and repeat the r_values according to the number of x values\n",
-    "#   r_values_r = np.repeat(r_values, [len(x) for x in x_fixed_r_arr])\n",
-    "#   r_values_s = np.repeat(r_values, [len(x) for x in x_fixed_s_arr])\n",
-    "#   x_fixed_r_arr = np.hstack(x_fixed_r_arr)\n",
-    "#   x_fixed_s_arr = np.hstack(x_fixed_s_arr)\n",
-    "\n",
-    "#   plt.scatter(r_values_r, x_fixed_r_arr,marker = 'x')\n",
-    "#   plt.scatter(r_values_s, x_fixed_s_arr, marker ='x')\n",
-    "#   plt.xlabel(\"Reflux Ratio\")\n",
-    "#   plt.ylabel(\"x\")\n",
-    "#   plt.show()\n",
-    "    "
+    "out_oplines = Output()"
    ]
   },
   {
@@ -282,19 +249,6 @@
     "\n",
     "layout_oplines = VBox([HBox(oplines_plot.children[:-1]), oplines_button, out_oplines])\n",
     "display(layout_oplines)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the interactive widget:\n",
-    "# fixed_points_reflux = widgets.interactive(plot_r_vs_fixedpoints_ex_1, xD=xD2_slider, xB=xB2_slider, r_max = r_max_slider) \n",
-    "\n",
-    "# Display the interactive widget:\n",
-    "# display(fixed_points_reflux)"
    ]
   }
  ],
