--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -67,7 +67,7 @@
     "toluene_antoine = AntoineEquationBase10(Tol_A, Tol_B, Tol_C)\n",
     "\n",
     "# Create a Raoult's law object\n",
-    "vle_model = RaoultsLawModel(2, P_sys, [benzene_antoine, toluene_antoine])\n"
+    "vle_model = RaoultsLawModel(2, P_sys, [\"Benzene\", \"Toluene\"], [benzene_antoine, toluene_antoine])\n"
    ]
   },
   {
@@ -129,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09e04d6914134a02917529b67d4faadf",
+       "model_id": "d4a575f588cd4d8e8423b3e806b47e5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9a40175658a42be817f1bdbe1857187",
+       "model_id": "c1a1e3b77368424ba00b24e5f1730df3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b44285997cc944a89d5310e6d2dbf92f",
+       "model_id": "1bd41b806330459b927107d07638a01d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
