--- a/src/Example4.ipynb
+++ b/src/Example4.ipynb
@@ -58,22 +58,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd59678fbe6946f487d9e9ca5f8b7df5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(FloatLogSlider(value=1.0, description='Reflux Ratio:', max=2.0, readout_format='…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R1_slider =  widgets.FloatSlider(value=0.1, min=0, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
@@ -86,7 +71,7 @@
     "    xB = np.array([1e-10, 0.0103,0.9897])\n",
     "    distillation_model = DistillationModelTernary(vle_model, xF = xF, xD = xD, xB = xB, reflux = R)\n",
     "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
-    "    distillation_model.plot_rect_strip(ax)\n",
+    "    distillation_model.plot_rect_strip_comp(ax)\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()"
    ]
@@ -99,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a358b96d93540d2af46484a8c5296c7",
+       "model_id": "b070ad4bae9244f7ae77458185fa71b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
