--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "    return y\n",
     "\n",
     "# Create a Raoult's law object\n",
-    "vle_model = VLEEmpiricalModelBinary(xtoy)\n",
+    "vle_model = VLEEmpiricalModelBinary(xtoy,[\"x1\",\"x2\"])\n",
     "\n",
     "# Define the sliders:\n",
     "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
@@ -122,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db06033e30224de5ae3ed8bda5de9658",
+       "model_id": "f6f93a42728f4856a5937e02cc47d081",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,13 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "419fce0175ff4e36a6dd8ee65c7670d1",
+       "model_id": "15897da38e184884b209e4b6691bbfba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,13 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bb98d4775064b9ba8f50407247db299",
+       "model_id": "5eaee1e73c0d4d26a9d5e927bdafaf21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
