--- a/src/Example4.ipynb
+++ b/src/Example4.ipynb
@@ -71,7 +71,7 @@
     "    xB = np.array([1e-10, 0.0103,0.9897])\n",
     "    distillation_model = DistillationModelTernary(vle_model, xF = xF, xD = xD, xB = xB, reflux = R)\n",
     "    fig, ax = plt.subplots(1,1,figsize= (5,5))\n",
-    "    distillation_model.plot_rect_strip_comp(ax)\n",
+    "    distillation_model.plot_rect_comp(ax)\n",
     "    plt.subplots_adjust(hspace=0)\n",
     "    plt.show()"
    ]
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b070ad4bae9244f7ae77458185fa71b0",
+       "model_id": "7ea873ac58a849938560c7489832fb6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
