--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### System Parameters using Raoult's Law"
+    "###### System Parameters using Raoult's Law"
    ]
   },
   {
@@ -79,7 +79,7 @@
     "# Define the sliders:\n",
     "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
     "xB1_slider = widgets.FloatSlider(value=0.05, min=0.001, max=0.499, step=0.0001, description='$x_B$:', readout_format='.2f')\n",
-    "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-2, max=2, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
+    "R1_slider =  widgets.FloatLogSlider(value=1.0, base=10, min=-1, max=1, step=0.001,  description='Reflux Ratio:', readout_format='.1f')\n",
     "go_button = widgets.Button(description='Create Model', width='15%', margin='0 10px 0 0')\n",
     "\n",
     "def plot_distil_oplines_ex1(xD=xD1_slider.value, xB=xB1_slider.value, R=R1_slider.value):\n",
@@ -129,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4a575f588cd4d8e8423b3e806b47e5d",
+       "model_id": "f87dba7f87624f86b1c5cecbb73f8ae0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1a1e3b77368424ba00b24e5f1730df3",
+       "model_id": "85f9aee62ef0419f8f84a144a6bf2b63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,7 +210,9 @@
    "metadata": {},
    "source": [
     "### Demo 3: Full Column\n",
-    "##### The graph on the right shows both operating lines.  The lines are green when the column parameters are feasible and red when unfeasible."
+    "##### The graph on the right shows both operating lines.  The lines are green when the column parameters are feasible and red when unfeasible.\n",
+    "\n",
+    "###### Hollow blue markers + make irrelevant segments on op lines lighter/transparent"
    ]
   },
   {
@@ -221,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bd41b806330459b927107d07638a01d",
+       "model_id": "35f4aa20fa4e42d886d51801aae1d125",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
