Finish Ex1 Changes, Begin Ex3

--- a/src/Example3.ipynb
+++ b/src/Example3.ipynb
@@ -58,7 +58,7 @@
     "    return y\n",
     "\n",
     "# Create a Raoult's law object\n",
-    "vle_model = VLEEmpiricalModelBinary(xtoy,[\"x1\",\"x2\"])\n",
+    "vle_model = VLEEmpiricalModelBinary(xtoy,[\"Benzene\",\"x2\"])\n",
     "\n",
     "# Define the sliders:\n",
     "xD1_slider = widgets.FloatSlider(value=0.95, min=0.5, max=0.999, step=0.0001, description='$x_D$:', readout_format='.2f')\n",
@@ -128,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6f93a42728f4856a5937e02cc47d081",
+       "model_id": "e39ec2765aae419d9b71087138775b3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15897da38e184884b209e4b6691bbfba",
+       "model_id": "33b340ba1e074d33884277b9537d9bca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -226,7 +226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5eaee1e73c0d4d26a9d5e927bdafaf21",
+       "model_id": "7b75afe293eb433894e0ac2cdb5280e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
