--- a/src/Example1.ipynb
+++ b/src/Example1.ipynb
@@ -129,12 +129,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f87dba7f87624f86b1c5cecbb73f8ae0",
+       "model_id": "e587724b4b994521bb1b686e23859848",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.95, description='$x_D$:', max=0.999, min=0.5, step=0.0001), …"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.05, description='$x_B$:', max=0.499, min=0.001, step=0.0001)…"
       ]
      },
      "metadata": {},
@@ -155,7 +155,7 @@
     "go_button = Button(description='Generate Plot')\n",
     "go_button.on_click(on_go_button_click)\n",
     "\n",
-    "layout = VBox([HBox(strip_plot.children[:-1]), go_button, out_strip])\n",
+    "layout = VBox([HBox([xB1_slider, R1_slider]), go_button, out_strip])\n",
     "display(layout)\n"
    ]
   },
@@ -175,7 +175,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85f9aee62ef0419f8f84a144a6bf2b63",
+       "model_id": "4f6f92743ad041f797575f0e84849305",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +201,7 @@
     "rect_button = Button(description='Generate Plot')\n",
     "rect_button.on_click(on_rect_button_click)\n",
     "\n",
-    "layout = VBox([HBox(rect_plot.children[:-1]), rect_button, out_rect])\n",
+    "layout = VBox([HBox([xD1_slider, R1_slider]), rect_button, out_rect])\n",
     "display(layout)"
    ]
   },
@@ -211,8 +211,7 @@
    "source": [
     "### Demo 3: Full Column\n",
     "##### The graph on the right shows both operating lines.  The lines are green when the column parameters are feasible and red when unfeasible.\n",
-    "\n",
-    "###### Hollow blue markers + make irrelevant segments on op lines lighter/transparent"
+    "\n"
    ]
   },
   {
@@ -223,7 +222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35f4aa20fa4e42d886d51801aae1d125",
+       "model_id": "c684d9ba4d6a4e8f90301b732efde6e2",
        "version_major": 2,
        "version_minor": 0
       },
