--- a/src/ex3_arclength_cont.ipynb
+++ b/src/ex3_arclength_cont.ipynb
@@ -281,9 +281,9 @@
     "    fig, axs = plt.subplots(2, 1, figsize=(5,5), gridspec_kw={'height_ratios': [40, 1]}, sharex='col')\n",
     "    distillation_model.plot_distil_rect_binary(ax=axs[0], ax_fixed=axs[1])\n",
     "    plt.subplots_adjust(hspace=0)\n",
-    "    axs[0].annotate('T', (0.75, 0.9), fontsize = 15)\n",
-    "    axs[0].annotate('U', (0.34, 0.73), fontsize = 15)\n",
-    "    axs[0].annotate('W', (0.09, 0.56), fontsize = 15)\n",
+    "    axs[0].annotate('A', (0.75, 0.9), fontsize = 15)\n",
+    "    axs[0].annotate('B', (0.34, 0.73), fontsize = 15)\n",
+    "    axs[0].annotate('C', (0.09, 0.56), fontsize = 15)\n",
     "\n",
     "    # Plot the second graph\n",
     "    fig, ax = plt.subplots(figsize=(7, 4))\n",
@@ -291,9 +291,9 @@
     "    ax.axvline(x=R, color='g', linestyle='-')\n",
     "    ax.set_xlabel(r'$\\lambda$')\n",
     "    ax.set_ylabel(r'$u_1$')\n",
-    "    ax.annotate('T', (1.1, 0.77), fontsize = 20)\n",
-    "    ax.annotate('U', (0.3, 0.3), fontsize = 20)\n",
-    "    ax.annotate('W', (1.1, 0.17), fontsize = 20)\n",
+    "    ax.annotate('A', (1.1, 0.77), fontsize = 20)\n",
+    "    ax.annotate('B', (0.3, 0.3), fontsize = 20)\n",
+    "    ax.annotate('C', (1.1, 0.17), fontsize = 20)\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
